--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <div class="screen">
+      <h1>Hello Gamer </h1>
+      <hr>
       <h1>Catch The Insect</h1>
       <button class="btn" id="start-btn">Play Game</button>
+      <h4 style="color: yellow;">This game is developed by Uttam kumar jena </h4>
     </div>
 
     <div class="screen">
